<resources>
    <string name="app_name">EasyEstate</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="SearchButton">Search</string>
    <string name="Nearby_Search">Nearby Search</string>
    <string name="My_Account">My Account</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="phone">Phone:</string>
    <string name="email">Email:</string>
    <string name="Name">Name:</string>
    <string name="Loading">Please Wait Loading...</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="Empty"></string>
    <string name="ChooseFromGallery">Choose From Gallery</string>
    <string name="Done">Done</string>
    <string name="ProfileEditMenu">Profile Edit Menu</string>
    <string name="Logout">Logout</string>
    <string name="Add_Listing">Add Listing</string>
    <string name="Title">Title:</string>
    <string name="Description">Description:</string>
    <string name="Estate_Type">Estate Type:</string>
    <string name="House">House</string>
    <string name="Land">Land</string>
    <string name="SquareMeter">Square Meter:</string>
    <string name="Price">Price:</string>
    <string name="Housing_Type">Housing Type:</string>
    <string name="Sale">Sale</string>
    <string name="Rent">Rent</string>
    <string name="next">Next</string>
    <string name="progress">Progress:</string>
    <string name="Zoning_Status">Zoning Status:</string>
    <string name="IslandNo">Island No:</string>
    <string name="ParcelNO">Parcel No:</string>
    <string name="LayoutNumber">Layout No:</string>
    <string name="Gabari">Gabari:</string>
    <string name="Deed_Status">Deed Status:</string>
    <string name="Provision_Floor">Provision Floor:</string>
    <string name="Loan_Eligibility">Loan Eligibility:</string>
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string-array name="zoning_status_array">
        <item>Choose</item>
        <item>Commercial Housing</item>
        <item>Vineyard/Garden</item>
        <item>Residence</item>
        <item>Field</item>
        <item>Protected Area</item>
        <item>Tourism</item>
        <item>Mass Housing</item>
        <item>Industry</item>
    </string-array>
    <string-array name="gabari_array">
        <item>Choose</item>
        <item>6.50</item>
        <item>9.50</item>
        <item>11.50</item>
        <item>12.50</item>
        <item>15.50</item>
        <item>18.50</item>
        <item>21.50</item>
        <item>25.50</item>
        <item>27.50</item>
        <item>30.50</item>
        <item>Unknown</item>
    </string-array>
    <string-array name="deed_status_array">
        <item>Choose</item>
        <item>Shareholding Deed</item>
        <item>Detached Parcel</item>
        <item>Allotment</item>
    </string-array>
    <string-array name="number_of_room_array">
    <item>Choose</item>
    <item>Studio(1+0)</item>
    <item>1</item>
    <item>1+1</item>
    <item>2+1</item>
    <item>2+2</item>
    <item>3+1</item>
    <item>3+2</item>
    <item>4+1</item>
    <item>4+1</item>
    <item>4+2</item>
    <item>4+3</item>
    <item>4+4</item>
    <item>5+1</item>
    <item>5+2</item>
    <item>5+3</item>
    <item>5+4</item>
    <item>More than 5</item>
</string-array>
    <string-array name="number_of_bath_array">
        <item>Choose</item>
        <item>None</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>More than 4</item>
    </string-array>
    <string-array name="heating_array">
        <item>Choose</item>
        <item>None</item>
        <item>Stove</item>
        <item>Natural Gas</item>
        <item>Floor Heating System</item>
        <item>Central Heating</item>
        <item>Underfloor Heating</item>
        <item>Air Conditioning</item>
    </string-array>
    <string-array name="use_status_array">
        <item>Choose</item>
        <item>Empty</item>
        <item>Tenanted</item>
        <item>Landholder</item>
    </string-array>
    <string name="title_activity_my_listing_control">MyListingControlActivity</string>
    <string name="NumberOfRooms">Number of Room:</string>
    <string name="NumberOfBath">Number of Bath:</string>
    <string name="AgeOfTheBuilding">Building Age:</string>
    <string name="NumberOfFloor">Number of Floor:</string>
    <string name="CurrentFloor">Current Floor:</string>
    <string name="dues">Dues:</string>
    <string name="Heating">Heating:</string>
    <string name="Furnished">Furnished:</string>
    <string name="UseStatus">Use Status:</string>
    <string name="In_The_Site">In the site:</string>
    <string name="Take_Picture">Take Picture</string>
    <string name="Gallery">Gallery</string>
    <string name="Delete">Delete</string>
    <string name="FindMyLocation">Find Location</string>
    <string name="Save">Done</string>
    <string name="title_activity_house">HouseActivity</string>
    <string name="title_activity_activity_land">ActivityLand</string>
    <string name="DescriptionTitle">Description</string>
    <string name="General_INFO">General Info</string>
    <string name="adID">ID:</string>
    <string name="Contact">Contact For More Info</string>
    <string name="title_activity_map_display">MapDisplayActivity</string>
    <string name="DisplayOnMap">Display On Map</string>
    <string name="Favorite">Favorite</string>
    <string name="State">State:</string>
    <string name="Province">Province:</string>
    <string-array name="priceSale">
        <item>Choose</item>
        <item>-50000</item>
        <item>50000-99999</item>
        <item>100000-249999</item>
        <item>250000-499999</item>
        <item>500000-749999</item>
        <item>750000-999999</item>
        <item>+1000000</item>
    </string-array>
    <string-array name="priceRent">
        <item>Choose</item>
        <item>-1000</item>
        <item>1000-2499</item>
        <item>2500-4999</item>
        <item>5000-7499</item>
        <item>7500-9999</item>
        <item>+10000</item>
    </string-array>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_search_nearby_map">SearchNearbyMapActivity</string>
    <string name="Features">Features</string>
    <string name="Size">Size:</string>
    <string name="Room">Room:</string>
    <string name="Bath">Bath:</string>

</resources>
