<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">
<ScrollView
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"

    >
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Title"
                style="@style/listingActivityTextStyle"
                android:id="@+id/textView2" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/titleEditText"
                android:maxLength="20"
                style="@style/listingActivitySubTextStyle"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Description"
                style="@style/listingActivityTextStyle"
                android:id="@+id/textView3" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/descriptionEditText"
                android:maxLines="3"
                style="@style/listingActivitySubTextStyle"
                android:layout_weight="1"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Estate_Type"
                style="@style/listingActivityTextStyle"
                android:id="@+id/textView4" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/House"
                    style="@style/listingActivitySubTextStyle"
                    android:checked="true"
                    android:id="@+id/houseRadioButton" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Land"
                    style="@style/listingActivitySubTextStyle"
                    android:layout_weight="1"
                    android:id="@+id/landRadioButton" />
            </RadioGroup>

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Price"
                style="@style/listingActivityTextStyle"
                android:id="@+id/textView7" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:layout_weight="1"
                android:maxLength="10"
                style="@style/listingActivitySubTextStyle"
                android:id="@+id/priceEditText" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SquareMeter"
                style="@style/listingActivityTextStyle"
                android:id="@+id/textView8" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:layout_weight="1"
                android:maxLength="5"
                style="@style/listingActivitySubTextStyle"
                android:id="@+id/squareMeterEditText" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Housing_Type"
                style="@style/listingActivityTextStyle"
                android:id="@+id/textView9" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Sale"
                    android:checked="true"
                    style="@style/listingActivitySubTextStyle"
                    android:id="@+id/saleRadioButton" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Rent"
                    android:layout_weight="1"
                    style="@style/listingActivitySubTextStyle"
                    android:id="@+id/rentRadioButton" />
            </RadioGroup>


        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp">

            <SeekBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/seekBar"

                android:max="100"
                android:layout_weight="1"
                android:layout_span="2"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:background="@drawable/button_click_indicator"
                android:layout_weight="1"
                android:id="@+id/nextButton" />

        </TableRow>
    </TableLayout>
</ScrollView>
   </LinearLayout>