<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Estate_Type"
                    style="@style/primaryTextStyle"
                    />
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/House"
                        style="@style/secondaryTextStyle"
                        android:checked="true"
                        android:id="@+id/selectHouseRadioButton" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Land"
                        android:layout_weight="1"
                        style="@style/secondaryTextStyle"
                        android:id="@+id/selectLandRadioButton" />
                </RadioGroup>

            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/State"
                    style="@style/primaryTextStyle"
                    />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/stateEditText"
                    style="@style/secondaryTextStyle"
                    android:layout_weight="1" />


            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Province"
                    style="@style/primaryTextStyle"
                    />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/provinceEditText"
                    style="@style/secondaryTextStyle"
                    android:layout_weight="1" />


            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Housing_Type"
                    style="@style/primaryTextStyle"
                    />
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                   android:orientation="horizontal"
                    android:id="@+id/radioHousingTypeGroup"
                    >

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Sale"
                        android:checked="true"
                        style="@style/secondaryTextStyle"
                        android:id="@+id/selectSaleRadioButton" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Rent"
                        android:layout_weight="1"
                        style="@style/secondaryTextStyle"
                        android:id="@+id/selectRentRadioButton" />
                </RadioGroup>

            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Price"
                    style="@style/primaryTextStyle"
                    />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/priceSelectSpinner"
                    android:entries="@array/priceSale"
                    android:spinnerMode="dialog"
                    style="@style/secondaryTextStyle"
                    android:layout_weight="1" />
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_gravity="right"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/SearchButton"
                android:id="@+id/searchButton"
                android:background="@drawable/button_click_indicator"
                android:layout_gravity="right" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>