<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.EasyEstate.Activity.ProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/profilePictureImageView"
            android:src="@mipmap/ic_launcher"
            android:padding="5dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ChooseFromGallery"
            android:id="@+id/chooseFromGalleryButton"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/profilePictureImageView"
            android:layout_toEndOf="@+id/profilePictureImageView" />

    </RelativeLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:id="@+id/tableView"
        android:padding="5dp">


        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="5dp"
            android:id="@+id/row1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:id="@+id/TextView3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Empty"
                android:layout_weight="1"
                android:id="@+id/emailTextView" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="5dp"
            >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Name"
                android:id="@+id/textView" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Empty"
                android:layout_weight="1"
                android:id="@+id/nameEditView" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:id="@+id/textView5" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Empty"
                android:layout_weight="1"
                android:id="@+id/phoneEditView" />
        </TableRow>
    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Done"
        android:id="@+id/doneButton"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
