<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/ic_launcher" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SearchButton"
        android:id="@+id/searchButton"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/NearbySearchButton"
        android:layout_alignStart="@+id/NearbySearchButton"
        android:layout_alignRight="@+id/NearbySearchButton"
        android:layout_alignEnd="@+id/NearbySearchButton"
        android:layout_marginBottom="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Nearby_Search"
        android:id="@+id/NearbySearchButton"
        android:layout_below="@+id/searchButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/My_Account"
        android:id="@+id/MyAccountButton"
        android:layout_below="@+id/NearbySearchButton"
        android:layout_alignRight="@+id/NearbySearchButton"
        android:layout_alignEnd="@+id/NearbySearchButton"
        android:layout_alignLeft="@+id/NearbySearchButton"
        android:layout_alignStart="@+id/NearbySearchButton"
        android:layout_marginBottom="10dp"/>
</RelativeLayout>