<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<ScrollView
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Zoning_Status"
                style="@style/listingActivityTextStyle"
                android:id="@+id/textView6" />

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ZoningStatusSpinner"
                android:entries="@array/zoning_status_array"
                android:spinnerMode="dialog"
                style="@style/listingActivitySubTextStyle"
                android:layout_weight="1"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/IslandNo"
                style="@style/listingActivityTextStyle"
                android:id="@+id/textView10" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:maxLength="6"
                android:ems="10"
                style="@style/listingActivitySubTextStyle"
                android:id="@+id/islandNoEditText" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ParcelNO"
                style="@style/listingActivityTextStyle"
                android:id="@+id/textView11" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                style="@style/listingActivitySubTextStyle"
                android:maxLength="5"
                android:ems="10"
                android:id="@+id/parcelNoEditText" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LayoutNumber"
                style="@style/listingActivityTextStyle"
                android:id="@+id/textView12" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:ems="10"
                style="@style/listingActivitySubTextStyle"
                android:maxLength="5"
                android:id="@+id/layoutNoEditText" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Gabari"
                style="@style/listingActivityTextStyle"
                android:id="@+id/textView13" />

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/GabariSpinner"
                android:spinnerMode="dialog"
                style="@style/listingActivitySubTextStyle"
                android:entries="@array/gabari_array"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Deed_Status"
                style="@style/listingActivityTextStyle"
                android:id="@+id/textView14" />

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/deedStatusSpinner"
                android:entries="@array/deed_status_array"
                android:spinnerMode="dialog"
                style="@style/listingActivitySubTextStyle"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Provision_Floor"
                style="@style/listingActivityTextStyle"
                android:id="@+id/textView15"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/provisionFloorCheckBox" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Loan_Eligibility"
                style="@style/listingActivityTextStyle"
                android:id="@+id/textView16"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/LoanEligibilityLandCheckBox" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp">

            <SeekBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/seekBar"
                android:clickable="false"
                android:progress="25"
                android:max="100"
                android:layout_weight="1"
                android:layout_span="2"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:layout_weight="1"
                android:background="@drawable/button_click_indicator"
                android:id="@+id/nextLandButton" />

        </TableRow>
    </TableLayout>
</ScrollView>
    </LinearLayout>